--- a/web/index.html
+++ b/web/index.html
@@ -15,12 +15,16 @@ and open the template in the editor.
         
         <a href="index.html"><IMG SRC="imagenes/tituloempresa.png" id="tituempre"></a>
         
-        <form action="Menu.jsp" id="formbarra">
+        <form action="SeleccionUsuarioAuto.jsp" id="formbarra">
             Usuario:<br>
-            <input type="text" name="firstname"><br>
+            <input type="text" name="user"><br>
             Contraseña:<br>
-            <input type="text" name="lastname"><br><br>
+            <input type="text" name="pass"><br><br>
+            <input type="submit" value="Login" id="boton">
         </form>
+        <BR>
+        <BR>
+        <BR>
         <BR>
         <BR>
         <BR>
